WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
208972
REGRESSION (
r254054
): finance.google.com watch list renders initially then disappears for 5+ seconds before reappearing
https://bugs.webkit.org/show_bug.cgi?id=208972
Summary
REGRESSION (r254054): finance.google.com watch list renders initially then di...
Simon Fraser (smfr)
Reported
2020-03-11 20:21:44 PDT
REGRESSION (
r254054
): finance.google.com watch list renders initially then disappears for 5+ seconds before reappearing
Attachments
Patch
(7.85 KB, patch)
2020-03-11 20:29 PDT
,
Simon Fraser (smfr)
zalan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2020-03-11 20:29:09 PDT
Created
attachment 393333
[details]
Patch
alan
Comment 2
2020-03-11 20:33:50 PDT
Comment on
attachment 393333
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=393333&action=review
> Source/WebCore/rendering/style/RenderStyle.cpp:822 > + if (m_boxData->hasAutoUsedZIndex() != other.m_boxData->hasAutoUsedZIndex()) > + return true;
It's a bit odd though that z-index change needs layout (and visual overflow computation as well. LFC should be better at this.)
Maciej Stachowiak
Comment 3
2020-03-11 22:17:02 PDT
Are the bot failures real?
Maciej Stachowiak
Comment 4
2020-03-11 22:18:18 PDT
WK1 and WK2 both showing css3/blending/repaint/blend-mode-isolate-stacking-context.html as failing, sounds possibly caused by this bug.
Simon Fraser (smfr)
Comment 5
2020-03-11 22:54:49 PDT
(In reply to Maciej Stachowiak from
comment #4
)
> WK1 and WK2 both showing > css3/blending/repaint/blend-mode-isolate-stacking-context.html as failing, > sounds possibly caused by this bug.
Changes in the order of repaints, which is not surprising. I'll verify that the rendering is correct, and rebaseline.
Antoine Quint
Comment 6
2020-03-12 01:01:27 PDT
<
rdar://problem/59727171
>
Simon Fraser (smfr)
Comment 7
2020-03-12 10:15:55 PDT
https://trac.webkit.org/changeset/258336/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug